test/functions/iterators/errors/mismatchedArgsS8-L64-F8.future
bug: mismatched serial/leader/follower iterators should fail to compile
#24214

This leader iterator doesn't create any parallelism, so the output in
the .bad file is deterministic.
